// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupFooter /> matches snapshot 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 256 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 256 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a
    href=\\"http://link.example.com\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 512 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z\\"
      >
      </path>
    </svg>
    link
  </a>
</div>
"
`;

exports[`<GroupFooter /> mathes snapshot when silence is rendered 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"angle-right\\"
            class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 256 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"angle-left\\"
          class=\\"svg-inline--fa fa-angle-left me-1\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 256 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a
    href=\\"http://link.example.com\\"
    target=\\"_blank\\"
    rel=\\"noopener noreferrer\\"
    class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
  >
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"up-right-from-square\\"
      class=\\"svg-inline--fa fa-up-right-from-square \\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 512 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z\\"
      >
      </path>
    </svg>
    link
  </a>
  <div class=\\"components-grid-alertgrid-alertgroup-shared-silence rounded-0 border-0\\">
    <div class=\\"card my-1 components-managed-silence\\">
      <div class=\\"card-header rounded-0 border-bottom-0 px-2\\">
        <div class=\\"d-flex flex-row\\">
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <svg
              aria-hidden=\\"true\\"
              focusable=\\"false\\"
              data-prefix=\\"fas\\"
              data-icon=\\"bell-slash\\"
              class=\\"svg-inline--fa fa-bell-slash text-muted\\"
              role=\\"img\\"
              xmlns=\\"http://www.w3.org/2000/svg\\"
              viewbox=\\"0 0 640 512\\"
            >
              <path
                fill=\\"currentColor\\"
                d=\\"M186 120.5C209 85.38 245.4 59.84 288 51.2V32C288 14.33 302.3 .0003 320 .0003C337.7 .0003 352 14.33 352 32V51.2C425 66.03 480 130.6 480 208V226.8C480 273.9 497.3 319.2 528.5 354.4L535.9 362.7C544.3 372.2 546.4 385.6 541.2 397.1C540.1 397.5 540.8 397.1 540.6 398.4L630.8 469.1C641.2 477.3 643.1 492.4 634.9 502.8C626.7 513.2 611.6 515.1 601.2 506.9L9.196 42.89C-1.236 34.71-3.065 19.63 5.112 9.196C13.29-1.236 28.37-3.065 38.81 5.112L186 120.5zM160 226.8V222.1L406.2 416H128C115.4 416 103.1 408.6 98.81 397.1C93.65 385.6 95.71 372.2 104.1 362.7L111.5 354.4C142.7 319.2 160 273.9 160 226.8V226.8zM320 512C303 512 286.7 505.3 274.7 493.3C262.7 481.3 256 464.1 256 448H384C384 464.1 377.3 481.3 365.3 493.3C353.3 505.3 336.1 512 320 512z\\"
              >
              </path>
            </svg>
          </div>
          <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
            <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
              Mocked Silence
            </div>
            <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
              <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
                — me@example.com
              </span>
              <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
                <span class=\\"badge bg-danger components-label\\">
                  Expired 14 hours ago
                </span>
              </div>
            </div>
          </div>
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
              <span class=\\"badge components-label with-click\\">
                <svg
                  aria-hidden=\\"true\\"
                  focusable=\\"false\\"
                  data-prefix=\\"fas\\"
                  data-icon=\\"chevron-down\\"
                  class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
                  role=\\"img\\"
                  xmlns=\\"http://www.w3.org/2000/svg\\"
                  viewbox=\\"0 0 448 512\\"
                  style=\\"transition: transform 0.25s ease-in-out;\\"
                >
                  <path
                    fill=\\"currentColor\\"
                    d=\\"M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z\\"
                  >
                  </path>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div class=\\"progress silence-progress mx-2 mb-1\\">
        <div
          class=\\"progress-bar bg-danger\\"
          role=\\"progressbar\\"
          style=\\"width: 1500%;\\"
          aria-valuenow=\\"1500\\"
          aria-valuemin=\\"0\\"
          aria-valuemax=\\"100\\"
        >
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
